# svg2dxf

./: .gitignore  README.en.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: release-nuitka.yml
src/svg2dxf/: cli.py  convert.py
